feat: security filter logging implemented